K1J-1881: Add validation for whitespace-only input in ElementValueText (#15)